# java-stats

./: README.md  __main__.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: lint.yml  tests.yml
docs/: metrics.tex  report_java-util.xml  report_java-util_comments.md  report_plantuml.xml  report_plantuml_comments.md
java_stats/: __init__.py  __main__.py  parser.py  stats.py
java_stats/metrics/: __init__.py  average_cyclomatic_complexity.py  average_depth_of_inheritance.py  average_lines_of_code.py  average_number_of_methods_per_class.py  inheritance_utils.py  maximum_cyclomatic_complexity.py  maximum_depth_of_inheritance.py  maximum_lines_of_code.py  maximum_number_of_methods_per_class.py  metric.py  number_of_classes.py  number_of_files.py  utils.py
src/: __init__.py  parser.py  stats.py
src/metrics/: __init__.py  average_number_of_methods_per_class.py  maximum_number_of_methods_per_class.py  metric.py  number_of_classes.py  number_of_files.py
src/stats/: __init__.py  stats.py
tests/: test_java_stats.py  test_metrics.py
tests/repos/complex_inheritance/src/: Car.java  SportsCar.java  Vehicle.java
tests/repos/complex_methods/src/: Calculator.java
tests/repos/many_methods/src/: Utility.java
tests/repos/simple_inheritance/src/: Animal.java  Dog.java
