[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "java-stats"
version = "1.0.0"
authors = [
    { name = "Valeriia Bykova" }
]
description = "Calculation of metrics for Java repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.8",
    "pathlib==1.0.1",
    "pylint==3.3.4",
    "pytest==8.3.5"
]

[project.scripts]
java-stats = "java_stats.main:main"